2002-03-10  Richard Henderson  <rth@redhat.com>

	* loop.c (strength_reduce): Compute number of iterations as
	unsigned HOST_WIDE_INT.

2002-03-10  Richard Henderson  <rth@redhat.com>

	* sched-rgn.c (add_branch_dependences): Don't allow insns that throw
	to move away from the end of the block.

2002-03-10  Neil Booth  <neil@daikokuya.demon.co.uk>

	PR preprocessor/5899
	* cppinit.c (init_dependency_output): Don't ignore -dM etc.
	
2002-03-10  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* mbchar.c (JIS_state_table, JIS_action_table): Const-ify.

	* attribs.c (decl_attributes): Fix signed/unsigned warning.

2002-03-10  Hans-Peter Nilsson  <hp@bitrange.com>

	* config/mmix/mmix.c: Improve comments.
	(mmix_target_asm_function_prologue): Drop variable
	empty_stack_frame.  Don't allocate unused slot above fp.
	(mmix_target_asm_function_epilogue): Mirror prologue changes.
	* config/mmix/mmix.h (MMIX_GNU_ABI_REG_ALLOC_ORDER): Don't have
	brace in first column.
	(enum reg_class): Ditto.
	(FIRST_PARM_OFFSET): Now 0.
	(USER_LABEL_PREFIX): Remove #if 0:d definition.

2002-03-10  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* combine.c (make_extraction): Fix error in last change.

2002-03-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* c4x.c (c4x_fp_reglist): Const-ify.
	* cris.c (cris_print_operand): Likewise.
	* i386.c (ix86_va_arg): Likewise.
	* ia64/unwind-ia64.c (unw_decode_table): Likewise.
	* m32r.c (m32r_hard_regno_mode_ok): Likewise.
	* m32r.h (m32r_hard_regno_mode_ok): Likewise.
	* mcore.c (regno_reg_class, mcore_unique_section): Likewise.
	* mcore.h (regno_reg_class): Likewise.
	* mips.c (gen_int_relational): Likewise.
	* ns32k.c (ns32k_reg_class_contents, regclass_map): Likewise.
	* ns32k.h (ns32k_reg_class_contents, regclass_map): Likewise.
	* pdp11.c (move_costs): Likewise.
	* pj.h (INITIALIZE_TRAMPOLINE): Likewise.
	* s390.c (s390_branch_condition_mnemonic, regclass_map):
	Likewise.
	* s390.h (regclass_map): Likewise.
	* sh.c (shift_amounts): Likewise.