@@ -1,5 +1,10 @@
 2002-03-10  Richard Henderson  <rth@redhat.com>
 
+	* reload.c (copy_replacements_1): New.
+	(copy_replacements): Use it to recurse through the rtx.
+
+2002-03-10  Richard Henderson  <rth@redhat.com>
+
 	* loop.c (strength_reduce): Compute number of iterations as
 	unsigned HOST_WIDE_INT.
 
